--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lambda-validator",
+  "name": "lambda-invalidator",
   "version": "1.0.0",
   "description": "A Lambda function that invalidates CloudFront distributions",
   "main": "index.js",
