--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "bin": {
     "cloudfront-invalidator": "./index.js"
   },
+  "repository": "github:qais-aboujaoude/cloudfront-invalidator",
   "author": "qais aboujaoude <q.i.aboujaoude@gmail.com>",
   "license": "MPL-2.0",
   "dependencies": {
