--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudfront-invalidator",
-  "version": "1.2.1-0",
+  "version": "1.2.1",
   "description": "A CLI tool that invalidates CloudFront distributions",
   "main": "index.js",
   "keywords": [
